--- a/cf/i18n/resources/es-es.all.json
+++ b/cf/i18n/resources/es-es.all.json
@@ -5236,6 +5236,10 @@
     "translation": "Este mandato"
   },
   {
+    "id": "This command is in EXPERIMENTAL stage and may change without notice",
+    "translation": ""
+  },
+  {
     "id": "This command requires the Routing API. Your targeted endpoint reports it is not enabled.",
     "translation": "Esta mandato requiere la API de direccionamiento. Los informes de puntos finales de destino no están habilitados."
   },
