--- a/cf/i18n/resources/ja-jp.all.json
+++ b/cf/i18n/resources/ja-jp.all.json
@@ -5236,6 +5236,10 @@
     "translation": "このコマンド"
   },
   {
+    "id": "This command is in EXPERIMENTAL stage and may change without notice",
+    "translation": ""
+  },
+  {
     "id": "This command requires the Routing API. Your targeted endpoint reports it is not enabled.",
     "translation": "このコマンドには Routing API が必要です。 ターゲットのエンドポイントから有効になっていないと報告がありました。"
   },
