--- a/cf/i18n/resources/ko-kr.all.json
+++ b/cf/i18n/resources/ko-kr.all.json
@@ -3580,6 +3580,10 @@
     "translation": "최대 빌드팩 스테이징 대기 시간(분)"
   },
   {
+    "id": "Max wait time to establish a connection, including name resolution, in seconds",
+    "translation": ""
+  },
+  {
     "id": "Maximum amount of memory an application instance can have (e.g. 1024M, 1G, 10G)",
     "translation": "애플리케이션 인스턴스에 있을 수 있는 최대 메모리 크기(예: 1024M, 1G, 10G)"
   },
