--- a/cf/i18n/resources/zh-hans.all.json
+++ b/cf/i18n/resources/zh-hans.all.json
@@ -3580,6 +3580,10 @@
     "translation": "buildpack 编译打包的最长等待时间（分钟）"
   },
   {
+    "id": "Max wait time to establish a connection, including name resolution, in seconds",
+    "translation": ""
+  },
+  {
     "id": "Maximum amount of memory an application instance can have (e.g. 1024M, 1G, 10G)",
     "translation": "应用程序实例可以具有的最大内存量（例如，1024M、1G、10G）"
   },
