--- a/cf/i18n/resources/it-it.untranslated.json
+++ b/cf/i18n/resources/it-it.untranslated.json
@@ -36,6 +36,10 @@
     "translation": "App"
   },
   {
+    "id": "App {{.AppName}} not found",
+    "translation": ""
+  },
+  {
     "id": "Application lifecycle:",
     "translation": "Application lifecycle:"
   },
@@ -844,6 +848,10 @@
     "translation": "QUOTA"
   },
   {
+    "id": "Recreate the app's executable artifact using the latest pushed app files and the latest environment (variables, service bindings, buildpack, stack, etc.)",
+    "translation": "Recreate the app's executable artifact using the latest pushed app files and the latest environment (variables, service bindings, buildpack, stack, etc.)"
+  },
+  {
     "id": "Repository: ",
     "translation": "Repository: "
   },
@@ -858,6 +866,10 @@
   {
     "id": "Service instance",
     "translation": "Service instance"
+  },
+  {
+    "id": "Service instance {{.ServiceInstance}} not found",
+    "translation": ""
   },
   {
     "id": "Service offering",
@@ -878,6 +890,10 @@
   {
     "id": "Space management:",
     "translation": "Space management:"
+  },
+  {
+    "id": "Stop all instances of the app, then start them again. This may cause downtime.",
+    "translation": ""
   },
   {
     "id": "TIMEOUT",
