--- a/cf/i18n/resources/pt-br.all.json
+++ b/cf/i18n/resources/pt-br.all.json
@@ -328,6 +328,10 @@
     "translation": "O app {{.AppName}} já está ligado a {{.ServiceName}}."
   },
   {
+    "id": "App {{.AppName}} not found",
+    "translation": ""
+  },
+  {
     "id": "Append API request diagnostics to a log file",
     "translation": "Anexar diagnósticos de solicitação de API a um arquivo de log"
   },
@@ -4212,6 +4216,10 @@
     "translation": "Certificado SSL inválido recebido de "
   },
   {
+    "id": "Recreate the app's executable artifact using the latest pushed app files and the latest environment (variables, service bindings, buildpack, stack, etc.)",
+    "translation": ""
+  },
+  {
     "id": "Recursively remove a service and child objects from Cloud Foundry database without making requests to a service broker",
     "translation": "Remover recursivamente um serviço e os objetos-filhos do banco de dados do Cloud Foundry sem fazer solicitações a um broker de serviço"
   },
@@ -4612,6 +4620,10 @@
     "translation": "A instância de serviço {{.ServiceInstanceName}} não existe."
   },
   {
+    "id": "Service instance {{.ServiceInstance}} not found",
+    "translation": ""
+  },
+  {
     "id": "Service instance: {{.ServiceName}}",
     "translation": "Instância de serviço: {{.ServiceName}}"
   },
@@ -4857,6 +4869,10 @@
   },
   {
     "id": "Status: {{.State}}",
+    "translation": ""
+  },
+  {
+    "id": "Stop all instances of the app, then start them again. This may cause downtime.",
     "translation": ""
   },
   {
