--- a/cf/i18n/resources/zh-hans.untranslated.json
+++ b/cf/i18n/resources/zh-hans.untranslated.json
@@ -44,6 +44,10 @@
     "translation": "App"
   },
   {
+    "id": "App {{.AppName}} not found",
+    "translation": ""
+  },
+  {
     "id": "Application lifecycle:",
     "translation": "Application lifecycle:"
   },
@@ -1288,6 +1292,10 @@
     "translation": "ROUTE_PATH"
   },
   {
+    "id": "Recreate the app's executable artifact using the latest pushed app files and the latest environment (variables, service bindings, buildpack, stack, etc.)",
+    "translation": "Recreate the app's executable artifact using the latest pushed app files and the latest environment (variables, service bindings, buildpack, stack, etc.)"
+  },
+  {
     "id": "Route and domain management:",
     "translation": "Route and domain management:"
   },
@@ -1308,6 +1316,10 @@
     "translation": "Service instance"
   },
   {
+    "id": "Service instance {{.ServiceInstance}} not found",
+    "translation": ""
+  },
+  {
     "id": "Service offering",
     "translation": "Service offering"
   },
@@ -1326,6 +1338,10 @@
   {
     "id": "Space management:",
     "translation": "Space management:"
+  },
+  {
+    "id": "Stop all instances of the app, then start them again. This may cause downtime.",
+    "translation": ""
   },
   {
     "id": "TIMEOUT",
